fix: text list item

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             </div>
             <div class="menu_list">
                 <ul class="text-white services">
-                    <li class="list_item"><a href="#"></a>Premium</li>
-                    <li class="list_item"><a href="#"></a>Assistenza</li>
-                    <li class="list_item"><a href="#"></a>Scarica</li>                  
+                    <li class="list_item"><a href="#">Premium</a></li>
+                    <li class="list_item"><a href="#">Assistenza</a></li>
+                    <li class="list_item"><a href="#">Scarica</a></li>                  
                 </ul>
                 <ul class="text-white user">
-                    <li class="list_item"><a href="#"></a>Iscrivi</li>
-                    <li class="list_item"><a href="#"></a>Accedi</li>
+                    <li class="list_item"><a href="#">Iscrivi</a></li>
+                    <li class="list_item"><a href="#">Accedi</a></li>
                 </ul>
             </div>
 
