feat: add hero section home

--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
                     <li class="list_item"><a href="#">Accedi</a></li>
                 </ul>
             </div>
-
         </nav>
     </header>
     <main>
-
+        <div class="hero_section">
+            <div class="header_container">
+                <h1>Listening is Everything</h1>
+            </div>
+            <p>Milioni di brani e podcast. Senza alcuna carta di credito.</p>
+            <a href="#">SCARICA SPOTIFY FREE</a>
+        </div>
     </main>
     <footer>
 
